<TableLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow android:padding="5dip">

        <TextView

            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="Welcome to Job Application"
            android:layout_height="180dp"
            android:fontFamily="cursive"
            android:textColor="#71266E"
            android:textSize="45dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/userName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:background="#fff"
            android:hint="@string/userName"
            android:padding="5dp"
            android:textColor="#000" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:hint="@string/password"
            android:padding="5dp"
            android:textColor="#000"
            android:inputType="textPassword" />
    </TableRow>


    <TableRow android:layout_marginTop="20dp">

        <Button
            android:id="@+id/loginBtn"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_span="2"
            android:background="@drawable/button_btn"
            android:text="@string/login"
            android:textSize="16dp"
            android:textColor="#fff"
/>

    </TableRow>

    <TableRow
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/changPass"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/ChangePass"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/regis"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/Regis"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </TableRow>


</TableLayout>